--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
+    "highlight.js": "^11.5.1",
+    "marked": "^4.0.15",
+    "marked-react": "^1.1.1",
     "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.0.0",
+    "react-lowlight": "^3.0.0",
+    "react-markdown": "^8.0.3",
     "react-redux": "^8.0.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
