--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^2.3.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
     "react-lowlight": "^3.0.0",
     "react-markdown": "^8.0.3",
     "react-redux": "^8.0.1",
