--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:3010",
   "eslintConfig": {
     "extends": [
       "react-app",
