--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@date-io/moment": "^2.14.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@mui/icons-material": "^5.10.2",
     "@mui/material": "^5.7.0",
+    "@mui/system": "^5.8.5",
+    "@mui/x-date-pickers": "^5.0.0-alpha.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
@@ -16,9 +20,11 @@
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
     "highlight.js": "^11.5.1",
+    "install": "^0.13.0",
     "marked": "^4.0.15",
     "marked-react": "^1.1.1",
     "moment": "^2.29.3",
+    "npm": "^8.12.2",
     "rc-slider": "10.0.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
